# dualcut

./: AGENTS.md  PARITY.md  README.md  ROADMAP.md  composition.json  index.html  package-lock.json  package.json  vite-plugin-composition.ts  vite.config.ts
.github/workflows/: ci.yml  flatpak.yml
docs/: USER_GUIDE.md
engine/: .gitignore  Cargo.toml
engine/build-aux/: io.github.hanthor.Dualcut.json  io.github.hanthor.Dualcut.metainfo.xml
engine/examples/: demo-project.json
engine/schema/: dualcut.d.ts  dualcut.schema.json
engine/src/: api.rs  document.rs  karaoke.rs  lib.rs  mapping.rs  scripting.rs  silence.rs  templates.rs  thumbs.rs  vector.rs  vellosrc.rs
engine/templates/: starter.json
scripts/: remote-build.sh  walkthrough.sh
skills/dualcut/: SKILL.md
skills/dualcut/references/: dualcut.schema.json
src/: App.css  App.tsx  index.css  persistence.ts  store.ts
src/components/: CodePanel.tsx  Inspector.tsx  Preview.tsx  Timeline.tsx
src/document/: demo.ts  interpolate.ts  types.ts
tests/: smoke.sh
