[package]
name = "dualcut-engine"
version = "0.26.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
cairo-rs = { version = "0.22", features = ["png"], optional = true }
gst-plugin-gtk4 = { version = "0.15.2", optional = true }
gstreamer = "0.25.3"
gstreamer-app = "0.25.2"
gstreamer-base = "0.25.3"
gstreamer-controller = "0.25.2"
gstreamer-editing-services = "0.25.2"
gstreamer-pbutils = "0.25.2"
gtk4 = { version = "0.11.4", optional = true }
image = { version = "0.25.10", optional = true }
libadwaita = { features = ["v1_8"],  version = "0.9.2", optional = true }
pango = { version = "0.22.8", optional = true }
pangocairo = { version = "0.22.8", optional = true }
pollster = { version = "1.0.1", optional = true }
rustyscript = { version = "0.12.3", optional = true }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0.120"
tiny_http = "0.12.0"
url = "2.5.8"
vello = { version = "0.9.0", optional = true }

[features]
preview = ["dep:gtk4", "dep:libadwaita", "dep:gst-plugin-gtk4", "dep:image", "karaoke"]
scripting = ["dep:rustyscript"]
vector = ["dep:vello", "dep:pollster", "dep:image"]
karaoke = ["dep:cairo-rs", "dep:pango", "dep:pangocairo", "dep:image"]

[[bin]]
name = "render"
path = "src/bin/render.rs"

[[bin]]
name = "preview"
path = "src/bin/preview.rs"
required-features = ["preview"]

[[bin]]
name = "script"
path = "src/bin/script.rs"
required-features = ["scripting"]

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[[bin]]
name = "vello_spike"
path = "src/bin/vello_spike.rs"
required-features = ["vector"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
